
////////////////////////////////////////////////////////////
// Template, add newest changes here

=== Beats version HEAD
https://github.com/elastic/beats/compare/v6.2.0...6.2[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Auditbeat*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Bugfixes

*Affecting all Beats*

*Auditbeat*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Added

*Affecting all Beats*

*Auditbeat*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Deprecated

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

==== Known Issue


////////////////////////////////////////////////////////////

[[release-notes-6.2.0]]
=== Beats version 6.2.0
https://github.com/elastic/beats/compare/v6.1.3...v6.2.0[View commits]

==== Breaking changes

*Affecting all Beats*

- The log format may differ due to logging library changes. {pull}5901[5901]
- The default value for pipelining is reduced to 2 to avoid high memory in the Logstash beats input. {pull}6250[6250]

*Auditbeat*

- Split the audit.kernel and audit.file metricsets into their own modules
  named auditd and file_integrity, respectively. This change requires
  existing users to update their config. {issue}5422[5422]
- Renamed file_integrity module fields. {issue}5423[5423] {pull}5995[5995]
- Renamed auditd module fields. {issue}5423[5423] {pull}6080[6080]

*Metricbeat*

- Rename `golang.heap.system.optained` field to `golang.heap.system.obtained`. {issue}5703[5703]
- De dot keys in jolokia/jmx metricset to prevent collisions. {pull}5957[5957]

==== Bugfixes

*Auditbeat*

- Fixed an issue where the proctitle value was being truncated. {pull}6080[6080]
- Fixed an issue where values were incorrectly interpretted as hex data. {pull}6080[6080]
- Fixed parsing of the `key` value when multiple keys are present. {pull}6080[6080]